# institutional-investor-casebook

./: .gitignore  README.md  gpu_dist_test.py  hf_login_script.py  pyproject.toml  run_benchmark.py
.github/workflows/: ci.yml
src/investor_casebook/: runner.py
src/investor_casebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/investor_casebook/data/: loader.py  sample_cases.json  sample_cases.jsonl
src/investor_casebook/reasoning/: evaluator.py  scorer.py
tests/: test_loader.py  test_runner_unit.py  test_scorer.py
